# meltwater-feeds-fastapi-backend

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.aws/: task-definition.json
.github/workflows/: aws.yml
app/: lifecycle.py  main.py
app/config/: allowed_origns.py  database.py
app/controllers/admin/: create_user_controller.py  delete_user_controller.py  edit_user_controller.py  get_single_user_controller.py  view_users_controller.py
app/controllers/auth/: login_controller.py  logout_controller.py  refresh_controller.py  tokens_controller.py
app/controllers/feed_collection_controllers/: delete_feed_controller.py  duplicate_feed_controller.py  get_feed_params_controller.py  get_feeds_controller.py  merge_feeds_controller.py
app/controllers/getfeed_controllers/: get_merged_feed_items.py  get_rss_controller.py
app/controllers/html-to-rss/: fetcher_controller.py
app/controllers/html_to_rss/: fetcher_controller.py  get_rss_controller.py  parser_controller.py
app/helpers/: date_formats_list.py  date_normalizer.py  rss_date_format.py
app/middleware/: verify_feed_id.py  verify_roles.py
app/models/: deleted_feeds.py  render_cache.py  user.py
app/models/html_to_rss/: document.py  feed.py
app/routers/: admin_routes.py  auth_routes.py  feed_collection_view_routes.py  get_feed_route.py  html_to_rss_routes.py  rss_playground_routes.py
app/schema/: delete_feed.py  document.py  feed_collection_schema.py  html_to_rss.py  merge_feeds.py  rss_playground.py  user.py
app/templates/: RSS_template.py  fallback_RSS_template.py  sharepoint_RSS_template.py
(+11 files in other folders)
